Dev server running, changes made on images and home for empty db

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8679,7 +8679,7 @@ header {
 }
 
 #contactImage {
-  background: url(/images/BARS.jpg) center;
+  background: url(/images/portrait.png) center;
   background-size: cover;
   height: 100%;
   margin-left: -15px;
