--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,3 +1,5 @@
+// Use npm run watch to watch changes overtime
+
 
 // Fonts
 @import url("https://fonts.googleapis.com/css?family=Alegreya|BenchNine|Courgette|Domine|Dosis|Quicksand");
@@ -330,7 +332,7 @@ header
 }
 #contactImage
 {
-	background: url(/images/BARS.jpg) center;
+	background: url(/images/portrait.png) center;
 	background-size: cover;
 	height: 100%;
 	margin-left: -15px;
