--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8380,13 +8380,13 @@ h5 {
   color: #4e3241;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   h1 {
     font-size: 20px;
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   h2 {
     font-size: 18px;
   }
@@ -8422,9 +8422,9 @@ button {
   border-radius: 5px/5px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .cta-button {
-    padding: initial;
+    padding: 20px;
     font-size: 16px;
   }
 }
@@ -8443,10 +8443,23 @@ button {
   padding: 20px;
 }
 
+@media screen and (max-width: 768px) {
+  .cta-button-mini {
+    padding: 10px;
+  }
+}
+
 .cta-button-mini:hover {
   color: #ded4cb;
   background-color: #4e3241;
   border: 2px solid #ded4cb;
+}
+
+@media screen and (max-width: 768px) {
+  .close {
+    font-size: 3em;
+    color: red;
+  }
 }
 
 .section {
@@ -8521,7 +8534,7 @@ header {
           filter: saturate(120%);
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   #headerImage {
     background: url(/images/headerImage.jpg);
     background-size: cover;
@@ -8539,7 +8552,7 @@ header {
   z-index: 2;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   #phoneNumber {
     padding: initial;
   }
@@ -8562,7 +8575,7 @@ header {
           box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.5);
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   #nav-header {
     position: relative;
     right: initial;
@@ -8608,7 +8621,7 @@ header {
   height: 15vh;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   #headerTitle,
   #headerCta {
     height: initial;
@@ -8640,7 +8653,7 @@ header {
           box-shadow: -20px 20px 40px 0px rgba(0, 0, 0, 0.4);
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   #story-content {
     position: absolute;
     z-index: initial;
@@ -8662,7 +8675,7 @@ header {
   border-radius: 5px/5px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   #mainImage {
     height: 25%;
     width: 100%;
@@ -8680,7 +8693,7 @@ header {
   overflow: auto;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .caption p {
     height: initial;
   }
@@ -8696,7 +8709,7 @@ header {
   width: 100%;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .thumbnail-image {
     height: 150px;
   }
@@ -8731,7 +8744,7 @@ header {
   padding-right: 50px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   #contact-content {
     border: initial;
     border-radius: initial;
@@ -8751,7 +8764,7 @@ header {
   padding: 10px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   #social-media {
     right: 5px;
   }
@@ -8776,7 +8789,7 @@ header {
   border-radius: 5px/5px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   #contactPicture {
     width: 90%;
     left: 5%;
