--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -167,6 +167,14 @@ button
 	100% { transform: rotate(360deg); }
 }
 
+.panel-body
+{
+	@media screen and (max-width: $md)
+	{
+		overflow-x: scroll;
+	}
+}
+
 /*
 *	Header
 */
@@ -266,6 +274,11 @@ header
 	font-family: $title;
 	font-size: 22px;
 	border-bottom: 1px solid $light-purple;
+
+	@media screen and (min-width: $sm)
+	{
+		font-size: 16px;
+	}
 }
 
 /*
