--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8622,7 +8622,7 @@ header {
   border-bottom: 1px solid #a47a8e;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 992px) {
   #navbar ul li a {
     font-size: 16px;
   }
