--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -275,7 +275,7 @@ header
 	font-size: 22px;
 	border-bottom: 1px solid $light-purple;
 
-	@media screen and (min-width: $sm)
+	@media screen and (max-width: $md)
 	{
 		font-size: 16px;
 	}
